--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,7 +10,7 @@
 }
 .hero-left {
   max-width: clamp(30.875rem, 0.1029rem + 41.0294vw, 65.75rem);
-  margin: clamp(5.625rem, 12.11vh, 10.3125rem) 0;
+  margin-top: clamp(5.625rem, 12.11vh, 10.3125rem);
   z-index: 1;
 }
 .hero-title {
