--- a/components/ui/navbar/navbar.module.css
+++ b/components/ui/navbar/navbar.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  z-index: 2;
 }
 .navbar-left {
   display: flex;
@@ -51,7 +52,7 @@
   top: 0;
   background-color: var(--token-color-surface-secondary);
   display: flex;
-  z-index: 20;
+  z-index: 3;
   flex-direction: column;
   gap: 44px;
   padding: 110px 15px 0 15px;
@@ -69,7 +70,7 @@
   height: 54px;
 }
 .mobile-links-container .navbar-logo {
-  z-index: 30;
+  z-index: 4;
   position: absolute;
   left: 15px;
   top: calc(15px + 0.21875rem);
@@ -86,7 +87,6 @@
     padding-bottom: 20px;
     background-color: var(--token-color-surface-primary);
     position: fixed;
-    z-index: 30;
   }
   .navbar-border {
     display: block;
@@ -112,7 +112,7 @@
     padding: 5px 5px;
     margin-right: -5px;
     background: none;
-    z-index: 30;
+    z-index: 4;
   }
   .navbar-links .burger-menu .icon-container {
     position: relative;
